# SimpleStrengthReductionPass

./: .gitignore  CMakeLists.txt  README.md  tasks.json
passes/: StrengthReduction.cpp
test/: input.ll
workflows/: ci.yml
